# LVGLESPIDF

./: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/arduino/: CMakeLists.txt
components/arduino/variants/esp32c3/: pins_arduino.h
components/lvgl/: Kconfig  lv_conf.h
components/lvgl/demos/benchmark/: lv_demo_benchmark.c
components/lvgl/src/: lv_conf.h  lv_conf_internal.h
components/lvgl/src/hal/: lv_hal_tick.c
components/lvgl/src/misc/: lv_anim.h  lv_timer.c
components/lvgl/src/widgets/: lv_label.c
components/tft/: User_Setup.h
components/tft/User_Setups/: Setup70c_ESP32_C3_ILI9341.h
main/: CMakeLists.txt  main.cpp
main/ui/: ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/web/: index.html
